# src/main/java/it/gov/pagopa/spontaneouspayment/exception/ErrorHandler.java
@@ -1,9 +1,8 @@
 package it.gov.pagopa.spontaneouspayment.exception;
 
 
-import java.util.ArrayList;
-import java.util.List;
-
+import it.gov.pagopa.spontaneouspayment.model.ProblemJson;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.TypeMismatchException;
 import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.http.HttpHeaders;
@@ -19,8 +18,8 @@ import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.method.annotation.MethodArgumentTypeMismatchException;
 import org.springframework.web.servlet.mvc.method.annotation.ResponseEntityExceptionHandler;
 
-import it.gov.pagopa.spontaneouspayment.model.ProblemJson;
-import lombok.extern.slf4j.Slf4j;
+import java.util.ArrayList;
+import java.util.List;
 
 
 /**
